07-07-21

stop stack overflow where the children levels go into thousands

Agile CRM and mailchimp integration work

added 'edit:zapattributes <pipe separated attribute list>'

24-06-21

No 0s on scale

Inspect "x more . . ." improvement

Support pre processor on pending uploads

Delete business

12-05-21

UI adjustments - tidying up the inspect database window

Keikai libraary upgrade

will clear attributes if the parameter 'cleardata' is set

will persist highlight options between reports

first version of workbook pre processor code, may need more testing

Revised test to determine if a longer string is a date - not a range of dates (Arcana fix)

check that the existing user choice is valid for chosen tree

13-04-21

Preprocessor file handler leak fix

12-04-21

Fixed bug in inspecting heading lines

Rejects ranges as dates

picks up context in allowable reports

drilldown context can reference attributes of the row or column heading name e.g. in spreadsheet Customer Record with customer = `[rowheading]`.`all customers`

restricted search of headingDivider to first part of headings

improving the new chosen tree option

If we create a single-cell region named ‘az_SheetOptions’ can we spedify ‘nosurround’ to remove the column and row headings and formula bar. (done)

25-03-21

Improvement to 'classifyby' allows strings - as in classifyby <born in `birth town`>

checkHeadings' now only accepts a line is a heading line if it finds 5 known headings in the first ten columns

18-03-21

Bug fix to allow something||somethign to be looked up in the database

Keikai Upgrade

12-03-21

headings now allow for 'attributes of attributes'
e.g. .`Brokasure Settlement Currency`.`Brokasure Currency Code` will find the attribute `Brokasure Settlement Currency` (e.g. "USD") convert that to a name, then look up the attribute of that name (e.g. '002')

tidying and changing the user log id so it can be picked back up when a user logs back in. Useful for stopping a long running execute